preparing markTrackable -> g_trackable_heap_start DeoptReallocFailure.java (prepare/finish_rtgc mismatch) HugeCapacity.java (alloc resurrected huge memory)